--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,1 +1,1 @@
-  <h1 class="titulo">Desafio Técnico Desenvolvedor Front End - Téxvn Group</h1>
+  <h1 class="titulo">Lista de Produtos com filtro de pesquisa</h1>
